# prog-tools

./: .gitignore  .tmux-script.temp  CMakeLists.txt  Makefile  Makefile-x86  clean-cg.sh  compare.c  compile-cg.sh  debug.sh  disassemble-cg.sh  done  error  find.sh  forth-engine.c  forth-engine.h  gdb-options.txt  gdb.sh  log.txt  notes.txt  prog-tools.tmux  run.sh  server.sh  temp.txt  watch-log.sh
bugs/: bugs.txt
bugs/broken-prims/build-sh4/: cache.d  cg50-sdl2  compatibility.d  console.d  debug.d  dummy.d  error.d  exceptions.d  forth-actions.d  forth-check.s  forth-compatibility.d  forth-engine.d  forth-jit.d  forth-locals.s  forth-primitives.s  forth-process.d  forth.d  getkey.d  graphics.d  key-remap-pc.d  key-remap.d  logging-config.d  logging-custom.d  logging.d  macros.d  main.d  manager.d  mem.d  memory-manager.d  menu.d  shell.d  test.d  text.d  util.d
bugs/broken-prims/include/: compatibility.h  dummy.h  forth-engine.h  forth.h  (+5 more)
bugs/jit_test/: godbolt.txt  notes.txt
font/: notes.txt
font/1-original/: font.py
font/2-conversion/: font.c
forth/: notes.txt  optimize.py
forth/machine-code/: Makefile  gdb-options.txt  int-test.py  optimize.py  results.sh  results.txt
images/: notes.txt
include/: error.h  exceptions.h  forth-actions.h  forth-check.h  forth-compatibility.h  forth-engine.h  forth-jit.h  forth-locals.h  forth-mem.h  forth-primitives.h  forth.h  getkey.h  graphics.h  key-remap-pc.h  logging-custom.h  logging.h  manager.h  mem.h  memory-manager.h  text.h
listing/: CMakeLists-edited.txt  CMakeLists-original.txt
menu-bug/: build-cg.sh  notes.txt  shell.sh
menu-bug/src/: main.c
notes/: bugs.txt  changes.txt
notes/forth/: graphics.txt  memory.txt  words.txt
screenshot/: convert.py  screenshot.ppm  screenshot.raw
sdl2/: .cg50-sdl2.c.swp  .main.c.swp  cg50-sdl2  cg50-sdl2.d  command.d  compatibility.d  console.d  debug.d  dummy.d  error.d  exceptions.d  forth-actions.d  forth-compatibility.d  forth-engine.d  forth-locals.d  forth-primitives.d  forth-process.d  forth.d  getkey.d  graphics.d  key-remap-pc.d  key-remap.d  logging-config.d  logging-custom.d  logging.d  main.d  manager.d  mem.d  memory_manager.d  menu.d  shell.d  test.d  text.d  util.d
sdl2-server/: Makefile
sdl2-server/src/: common.c  common.h  sdl2-server.c
sdl2-server/test-client/: Makefile  Makefile-x86  shell.sh  update-common.sh
src/: .cg50-sdl2.c.swp  .command.c.swp  .compatibility.h.swp  .dummy.c.swp  .dummy.h.swp  .forth-engine.h.swo  .forth-primitives.h.swo  .getkey.c.swp  .getkey.h.swp  .graphics.c.swp  .graphics.h.swp  .logging.h.swo  .main.c.swp  .manager.c.swp  .manager.h.swp  .mem.c.swp  .mem.h.swp  .menu.c.swp  .menu.h.swp  .text.c.swp  .text.h.swp  cache.S  cache.h  cg50-sdl2.c  cg50-sdl2.c.lst  command.c  command.c.lst  command.h  compatibility.c  compatibility.h  console.c  console.h  debug.c  debug.c.lst  debug.h  dummy.c  dummy.c.lst  dummy.h  error.c  error.c.lst  (+63 more)
src/custom/: notes.txt
src/debug/: mem.c
tests/: gen-ls-test.py
tests/machine-code/: compile.sh  debug.sh  gdb.sh  main.c  run.sh  test
tests/musttail-makefile/: Makefile
tests/tail-calls/: compatibility.h  forth-primitives.h  forth-primitives.s  forth.h  notes.txt  test.sh  types.h
tests/underscore/: foo.s  run.sh
(+63 files in other folders)
